--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^4.0.0",
     "gulp-less": "^3.3.2",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglifyjs": "^0.6.2",
     "imagemin-pngquant": "^5.0.1"
