--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "gulp-cache": "^1.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
+    "gulp-debug": "^3.1.0",
     "gulp-imagemin": "^4.0.0",
     "gulp-less": "^3.3.2",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-svgmin": "^1.2.4",
+    "gulp-svgstore": "^6.1.0",
     "gulp-uglifyjs": "^0.6.2",
+    "imagemin-mozjpeg": "^6.0.0",
     "imagemin-pngquant": "^5.0.1"
-  }
+  },
+  "dependencies": {}
 }
